--- a/build.yml
+++ b/build.yml
@@ -1,28 +1,77 @@
-name: React Build
+name: CI Pipeline (Lint + Build + Test)
 
-on: [push]
+on:
+  push:
+    branches: [ main, develop ]
+  pull_request:
+    branches: [ main, develop ]
 
 jobs:
-  build:
+  lint_and_test:
+    name: Lint & Test
     runs-on: ubuntu-latest
-
+    
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
-
-      - name: Use Node.js
+      
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: '18'
-
+          cache: 'npm'
+      
       - name: Install dependencies
-        run: npm install
-
-      - name: Run build
-        run: npm run build
-
-      - name: Upload build artifacts
+        run: npm ci
+      
+      - name: Run ESLint
+        run: npm run lint
+      
+      - name: Run Jest tests
+        run: npm run test:ci
+        env:
+          CI: true
+      
+      - name: Upload test coverage
         uses: actions/upload-artifact@v3
         with:
-          name: build
-          path: build
+          name: coverage-report
+          path: coverage/
+          if-no-files-found: ignore
+
+  build:
+    name: Build Production
+    runs-on: ubuntu-latest
+    needs: lint_and_test
+    
+    steps:
+      - name: Checkout code
+        uses: actions/checkout@v4
+      
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '18'
+          cache: 'npm'
+      
+      - name: Install dependencies
+        run: npm ci
+      
+      - name: Build project
+        run: npm run build
+        env:
+          CI: true
+      
+      - name: Run Lighthouse audit
+        uses: treosh/lighthouse-ci-action@v9
+        with:
+          urls: |
+            http://localhost:3000
+          temporaryPublicStorage: true
+      
+      - name: Upload production build
+        uses: actions/upload-artifact@v3
+        with:
+          name: production-build
+          path: build/
+          retention-days: 5
