added s to http://localhost:3000

--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -1,7 +1,7 @@
 {
     "ci": {
       "collect": {
-        "url": ["http://localhost:3000"],
+        "url": ["https://localhost:3000"],
         "numberOfRuns": 3,
         "settings": {
           "chromeFlags": "--no-sandbox --headless --ignore-certificate-errors --disable-web-security",
