--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -61,10 +61,15 @@ jobs:
       
       - name: Build project
         run: npm run build:extension
+    
+      - name: Start Server and Log Output
+        run: |
+          npm run start > server.log 2>&1 &
+            sleep 30
 
-      - name: wait for server to launch
-        run: sleep 20
-      
+      - name: Display Server Logs
+        run: cat server.log
+
       - name: verify server running
         run: |
           for i in {1..10}; do
