--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,27 +1,69 @@
 {
   "manifest_version": 3,
   "name": "Cheaper",
-  "version": "1.0.0",
-  "description": "A Chrome extension for price comparison.",
-  "permissions": ["activeTab", "scripting", "storage"],
-  "action": {
-    "default_popup": "./index.html",
-    "default_icon": {
-      "16": "./icons/icon16.png",
-      "48": "./icons/icon48.png",
-      "128": "./icons/icon128.png"
+  {
+    "start_url": "/",
+    "background_color": "#ffffff",
+    "display": "standalone",
+    "scope": "/",
+    "theme_color": "#000000",
+    "orientation": "portrait-primary",
+    "version": "1.0.0",
+    "description": "A Chrome extension for price comparison.",
+    "permissions": [
+      "activeTab",
+      "scripting",
+      "storage"
+    ],
+    "action": {
+      "default_popup": "./index.html",
+      "default_icon": {
+        "16": "./icons/icon16.png",
+        "48": "./icons/icon48.png",
+        "128": "./icons/icon128.png",
+        "192": "./icons/icon-192x192.png",
+        "512": "./icons/icon-512x512.png"
+      },
+      "web_accessible_resources": [
+        {
+          "resources": ["./icons/*"],
+          "matches": ["<all_urls>"]
+        }
+      ]
+
+    },
+    "icons": {
+      [
+        {
+          "src": "icons/icon-192x192.png",
+          "type": "image/png",
+          "sizes": "192x192",
+          "purpose": "maskable"
+        },
+        {
+          "src": "icons/icon-512x512.png",
+          "type": "image/png",
+          "sizes": "512x512"
+        },
+        "16": "./icons/icon16.png",
+        "48": "./icons/icon48.png",
+        "128": "./icons/icon128.png"
+      ]
+    },
+    "web_accessible_resources": [
+      {
+        "resources": [
+          "./static/js/*",
+          "./static/css/*",
+          "./index.html"
+        ],
+        "matches": [
+          "<all_urls>"
+        ]
+      }
+    ],
+    "content_security_policy": {
+      "extension_pages": "script-src 'self'; object-src 'self'"
     }
-  },
-  "icons": {
-    "16": "./icons/icon16.png",
-    "48": "./icons/icon48.png",
-    "128": "./icons/icon128.png"
-  },
-  "web_accessible_resources": [{
-    "resources": ["./static/js/*", "./static/css/*", "./index.html"],
-    "matches": ["<all_urls>"]
-  }],
-  "content_security_policy": {
-    "extension_pages": "script-src 'self'; object-src 'self'"
   }
 }
