--- a/public/manifest.json
+++ b/public/manifest.json
@@ -4,6 +4,10 @@
   "version": "1.0.0",
   "description": "A Chrome extension for price comparison.",
   "permissions": ["activeTab", "scripting", "storage"],
+  "theme_color": "#000000",
+  "display": "standalone",
+  "start_url": "/",
+  "background_color": "#ffffff",
   "action": {
     "default_popup": "./index.html",
     "default_icon": {
@@ -12,11 +16,24 @@
       "128": "./icons/icon128.png"
     }
   },
-  "icons": {
+  "icons": [{
     "16": "./icons/icon16.png",
     "48": "./icons/icon48.png",
-    "128": "./icons/icon128.png"
+    "128": "./icons/icon128.png",
+    "192": "/icons/icon-192x192.png"
   },
+    {
+    "src": "/icons/icon-512x512.png",
+      "sizes": "512x512",
+      "type": "image/png"
+  },
+  {
+    "src": "/icons/icon-192x192.png",
+    "sizes": "192x192",
+    "type": "image/png",
+    "purpose": "maskable"
+  }
+],
   "web_accessible_resources": [{
     "resources": ["./static/js/*", "./static/css/*", "./index.html"],
     "matches": ["<all_urls>"]
