--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,6 +1,8 @@
 {
   "manifest_version": 3,
   "name": "Cheaper",
+  "short_name": "Cheaper",
+  "orientation": "portrait-primary",
   "version": "1.0.0",
   "description": "A Chrome extension for price comparison.",
   "permissions": ["activeTab", "scripting", "storage"],
@@ -19,8 +21,7 @@
   "icons": [{
     "16": "./icons/icon16.png",
     "48": "./icons/icon48.png",
-    "128": "./icons/icon128.png",
-    "192": "/icons/icon-192x192.png"
+    "128": "./icons/icon128.png"
   },
     {
     "src": "/icons/icon-512x512.png",
@@ -32,6 +33,11 @@
     "sizes": "192x192",
     "type": "image/png",
     "purpose": "maskable"
+  },
+  {
+    "src": "/icons/apple-touch-icon.png",
+    "sizes": "180x180",
+    "type": "image/png"
   }
 ],
   "web_accessible_resources": [{
