indenting and naming

--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,16 +60,17 @@ jobs:
         run: npm ci
       
       - name: Build project
-        run: npm run build:extension
-             ls -la build
+        run: |
+              npm run build:extension
+              ls -la build
 
       - name: Set Public Url
         run: echo "PUBLIC_URL=." >> $GITHUB_ENV 
     
       - name: Start Server and Log Output
         run: |
-          npm run start > server.log 2>&1 &
-            sleep 30
+          PORT =8080 npm run start > server.log 2>&1 &
+          sleep 15
 
       - name: Display Server Logs
         run: cat server.log
@@ -78,7 +79,7 @@ jobs:
         run: |
           for i in {1..3}; do
             echo "Attempt $i to check server status..."
-            if curl -s http://localhost:3000 | grep -q "<html>"; then
+            if curl -s http://localhost:8080 | grep -q "<html>"; then
               echo "Server is up!"
               break
             else
@@ -86,13 +87,13 @@ jobs:
               sleep 5
             fi
           done
-          curl -I http://localhost:3000 || (echo "Server is not running after 10 attempts" && exit 1)
+          curl -I http://localhost:8080 || (echo "Server is not running after 3 attempts" && exit 1)
 
       - name: Run Lighthouse audit
         uses: treosh/lighthouse-ci-action@v9
         with:
           urls: |
-            http://localhost:3000
+            http://localhost:8080
           temporaryPublicStorage: true
           configPath: .lighthouserc.json
       
