--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           cache: 'npm'
       
       - name: Run ESLint
-        run: npm run lint
+        run: npx eslint src --ext .js,.jsx --max-warnings=0
       
       - name: Run Jest tests
         run: npm run test:ci
