--- a/package.json
+++ b/package.json
@@ -60,7 +60,7 @@
     ]
   },
   "devDependencies": {
-    "eslint": "8.57.1",
+    "eslint": "^8.41.1",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.5",
     "eslint-plugin-react-hooks": "4.6.2",
