--- a/package.json
+++ b/package.json
@@ -63,6 +63,7 @@
   "devDependencies": {
     "@babel/eslint-parser": "^7.27.1",
     "@babel/preset-react": "^7.27.1",
+    "@eslint/eslintrc": "^3.3.1",
     "@eslint/js": "^9.27.0",
     "eslint": "^8.57.1",
     "eslint-config-react": "^1.1.7",
