--- a/public/manifest.json
+++ b/public/manifest.json
@@ -29,7 +29,7 @@
       "type": "image/png"
   },
   {
-    "src": "/icons/icon-192x192.png",
+    "src": "/icons/maskable-icon-192x192.png",
     "sizes": "192x192",
     "type": "image/png",
     "purpose": "maskable"
