--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "name": "cheaper-extension",
   "version": "1.0.0",
+  "homepage": ".",
   "private": true,
   "dependencies": {
     "@testing-library/jest-dom": "6.6.3",
