--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,25 +34,6 @@ jobs:
       - name: Run Jest tests
         run: npm run test:ci
 
-      - name: Check service worker
-        run: |
-          grep -i "serviceWorker" build/index.html || echo "❌ No service worker registered"
-          ls build/service-worker.js || echo "❌ service-worker.js not found"
-      
-      - name: Debug Build Output
-        run: |
-          echo "🔍 Build manifest.json:"
-          cat build/manifest.json || echo "❌ manifest.json missing"
-    
-          echo "🔍 Check index.html for manifest link:"
-          grep -i "manifest" build/index.html || echo "❌ Manifest not linked"
-    
-          echo "🔍 Apple touch icon:"
-          grep -i "apple-touch-icon" build/index.html || echo "❌ Not linked"
-    
-          echo "🔍 Check icons folder:"
-          ls -lh build/icons || echo "❌ Icons folder missing"
-
       - name: Run Lighthouse CI
         run: npx lhci autorun --config=.lighthouserc.js
 
@@ -94,8 +75,8 @@ jobs:
     
       - name: Start Server and Log Output
         run: |
-          PORT=8080 npm run start > server.log 2>&1 &
-          sleep 30
+          npx serve -s build -l 8080 > server.log 2>&1 &
+          sleep 15
 
       - name: Display Server Logs
         run: cat server.log
@@ -113,6 +94,25 @@ jobs:
             fi
           done
           curl -I http://localhost:8080 || (echo "Server is not running after 3 attempts" && exit 1)
+      
+      - name: Check service worker
+        run: |
+          grep -i "serviceWorker" build/index.html || echo "❌ No service worker registered"
+          ls build/service-worker.js || echo "❌ service-worker.js not found"
+      
+      - name: Debug Build Output
+        run: |
+          echo "🔍 Build manifest.json:"
+          cat build/manifest.json || echo "❌ manifest.json missing"
+    
+          echo "🔍 Check index.html for manifest link:"
+          grep -i "manifest" build/index.html || echo "❌ Manifest not linked"
+    
+          echo "🔍 Apple touch icon:"
+          grep -i "apple-touch-icon" build/index.html || echo "❌ Not linked"
+    
+          echo "🔍 Check icons folder:"
+          ls -lh build/icons || echo "❌ Icons folder missing"
 
       - name: Run Lighthouse audit
         uses: treosh/lighthouse-ci-action@v9
