--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && cp -R public/icons build/icons",
-    "build:pwa":"npm run build && cp public/manifest.pwa.json build/manifest.json",
+    "build": "react-scripts build && node scripts/copyAssets.js",
+    "build:pwa": "npm run build && cp public/manifest.pwa.json build/manifest.json",
     "build:extension": "npm run build && cp public/extension.manifest.json build/manifest.json && node scripts/postbuild.js",
     "postbuild": "node scripts/postbuild.js",
     "test": "react-scripts test",
@@ -71,6 +71,7 @@
     "eslint-plugin-jsx-a11y": "^6.10.2",
     "eslint-plugin-react": "^7.37.5",
     "eslint-plugin-react-hooks": "^4.6.2",
+    "fs-extra": "^11.3.0",
     "globals": "^16.1.0",
     "size-limit": "8.2.3",
     "web-ext": "7.8.0"
