--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:prod": "serve -s build -l 8080",
     "build": "react-scripts build && node scripts/copyAssets.js",
     "build:pwa": "npm run build && cp public/manifest.pwa.json build/manifest.json",
     "build:extension": "npm run build && cp public/extension.manifest.json build/manifest.json && node scripts/postbuild.js",
@@ -73,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.6.2",
     "fs-extra": "^11.3.0",
     "globals": "^16.1.0",
+    "serve": "^14.2.4",
     "size-limit": "8.2.3",
     "web-ext": "7.8.0"
   },
