--- a/package.json
+++ b/package.json
@@ -76,6 +76,7 @@
     "globals": "^16.1.0",
     "serve": "^14.2.4",
     "size-limit": "8.2.3",
+    "wait-on": "^8.0.3",
     "web-ext": "7.8.0"
   },
   "size-limit": [
