--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -75,7 +75,7 @@ jobs:
     
       - name: Start Server and Log Output
         run: |
-          npx npm run start:prod > server.log 2>&1 &
+          npx serve -s build -l 8080 > server.log 2>&1 &
 
       - name: Wait for server
         run: npx wait-on http://localhost:8080
