--- a/.lighthouserc.json
+++ b/.lighthouserc.json
@@ -4,7 +4,7 @@
         "url": ["http://localhost:8080"],
         "numberOfRuns": 3,
         "settings": {
-          "chromeFlags": " --enable-logging =stderr --v=1 --no-sandbox --headless --ignore-certificate-errors --disable-web-security ",
+          "chromeFlags": " --enable-logging =stderr --v=1 --no-sandbox --headless --ignore-certificate-errors",
           "onlyCategories": ["performance", "accessibility", "best-practices", "seo"]
         }
       },
@@ -16,6 +16,10 @@
           "categories:best-practices": ["error", {"minScore": 0.9}],
           "categories:seo": ["error", {"minScore": 0.9}]
         }
+      },
+        "upload":{
+          "target": "temporary-public-storage"
+        }
       }
     }
-  }
+  
