--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -34,8 +34,8 @@ jobs:
       - name: Run Jest tests
         run: npm run test:ci
 
-      - name: Run Lighthouse CI
-        run: npx lhci autorun --config=.lighthouserc.js
+#      - name: Run Lighthouse CI
+#        run: npx lhci autorun --config=.lighthouserc.js
 
       - name: Upload test coverage
         uses: actions/upload-artifact@v4
@@ -127,13 +127,13 @@ jobs:
     
           echo "🔍 Check icons folder:"
           ls -lh build/icons || echo "❌ Icons folder missing"
-
-      - name: Run Lighthouse audit
-        uses: treosh/lighthouse-ci-action@v9
-        with:
-          configPath: './.lighthouserc.json'
-          temporaryPublicStorage: false
-      
+#
+#      - name: Run Lighthouse audit
+#        uses: treosh/lighthouse-ci-action@v9
+#        with:
+#          configPath: './.lighthouserc.json'
+#          temporaryPublicStorage: false
+      #
       - name: Check bundle size
         run: |
           npm install -g size-limit
