--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "axios": "1.6.7",
     "lucide-react": "^0.511.0",
     "react": "19.1.0",
+    "react-cookie-consent": "^9.0.0",
     "react-dom": "19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.2",
@@ -43,13 +44,13 @@
       "!src/reportWebVitals.js",
       "!src/setupTests.js"
     ],
-  "coverageThreshold": {
-    "global": {
-      "branches": 40,
-      "functions": 40,
-      "lines": 50,
-      "statements": 50
-    }
+    "coverageThreshold": {
+      "global": {
+        "branches": 40,
+        "functions": 40,
+        "lines": 50,
+        "statements": 50
+      }
     },
     "moduleNameMapper": {
       "^react-router-dom$": "<rootDir>/src/__mocks__/react-router-dom.js"
