--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,29 +6,22 @@ on:
   pull_request:
     branches: [ main, develop ]
 
-env:
-  CI: true
-  NODE_VERSION: '20'
-
 jobs:
   lint_and_test:
     name: Lint & Test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: 'npm'
 
-      - name: Install ESLintv8
+      - name: Install ESLint v8
         run: npm install --save-dev eslint@8
 
       - name: Run ESLint
@@ -48,18 +41,15 @@ jobs:
     name: Build & Validate
     runs-on: ubuntu-latest
     needs: lint_and_test
-    strategy:
-      matrix:
-        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v3
         with:
-          node-version: ${{ matrix.node-version }}
+          node-version: 20
           cache: 'npm'
 
       - name: Install dependencies
@@ -86,7 +76,7 @@ jobs:
       - name: Display Server Logs
         run: cat server.log
 
-      - name: verify server running
+      - name: Verify server running
         run: |
           for i in {1..3}; do
             echo "Attempt $i to check server status..."
