--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,18 +10,21 @@ jobs:
   lint_and_test:
     name: Lint & Test
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 20
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
           cache: 'npm'
 
-      - name: Install ESLint v8
+      - name: Install ESLint
         run: npm install --save-dev eslint@8
 
       - name: Run ESLint
@@ -41,12 +44,15 @@ jobs:
     name: Build & Validate
     runs-on: ubuntu-latest
     needs: lint_and_test
+    strategy:
+      matrix:
+        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js 20
+      - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: 20
