--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -10,15 +10,12 @@ jobs:
   lint_and_test:
     name: Lint & Test
     runs-on: ubuntu-latest
-    strategy:
-      matrix:
-        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -44,15 +41,12 @@ jobs:
     name: Build & Validate
     runs-on: ubuntu-latest
     needs: lint_and_test
-    strategy:
-      matrix:
-        node-version: [20.x]
 
     steps:
       - name: Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Node.js
+      - name: Set up Node.js 20
         uses: actions/setup-node@v3
         with:
           node-version: 20
@@ -101,28 +95,16 @@ jobs:
           grep -i "serviceWorker" build/index.html || echo "❌ No service worker registered"
           ls build/service-worker.js || echo "❌ service-worker.js not found"
 
-      - name: List build content
-        run: ls -la build
-
-      - name: Log server contents
-        run: cat server.log
-
-      - name: Debug loaded HTML
-        run: curl -s http://localhost:8080 | tee page.html
-
       - name: Debug Build Output
         run: |
-          echo "🔍 Build manifest.json:"
-          cat build/manifest.json || echo "❌ manifest.json missing"
-
-          echo "🔍 Check index.html for manifest link:"
-          grep -i "manifest" build/index.html || echo "❌ Manifest not linked"
-
-          echo "🔍 Apple touch icon:"
-          grep -i "apple-touch-icon" build/index.html || echo "❌ Not linked"
-
-          echo "🔍 Check icons folder:"
-          ls -lh build/icons || echo "❌ Icons folder missing"
+          echo "🔍 manifest.json:"
+          cat build/manifest.json || echo "❌ missing"
+          echo "🔍 index.html link to manifest:"
+          grep -i "manifest" build/index.html || echo "❌ not linked"
+          echo "🔍 apple-touch-icon:"
+          grep -i "apple-touch-icon" build/index.html || echo "❌ not linked"
+          echo "🔍 icons folder:"
+          ls -lh build/icons || echo "❌ missing"
 #
 #      - name: Run Lighthouse audit
 #        uses: treosh/lighthouse-ci-action@v9
