--- a/package.json
+++ b/package.json
@@ -4,17 +4,17 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "ajv-keywords": "^3.5.2",
+    "ajv-keywords": "3.5.2",
     "axios": "1.6.7",
-    "lucide-react": "^0.511.0",
-    "react": "19.1.0",
-    "react-cookie-consent": "^9.0.0",
-    "react-dom": "19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router": "^7.6.2",
-    "react-router-dom": "^7.6.3",
+    "lucide-react": "0.511.0",
+    "react": "18.2.0",
+    "react-cookie-consent": "9.0.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.5.0",
+    "react-router": "7.6.2",
+    "react-router-dom": "7.6.3",
     "react-scripts": "5.0.1",
-    "react-tooltip": "^5.28.1",
+    "react-tooltip": "5.28.1",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -70,27 +70,26 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.27.1",
-    "@babel/preset-react": "^7.27.1",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^8.26.0",
-    "@testing-library/dom": "^10.4.0",
-    "@testing-library/jest-dom": "^6.6.3",
-    "@testing-library/react": "^16.3.0",
-    "@testing-library/user-event": "^14.6.1",
-    "autoprefixer": "^10.4.21",
-    "eslint": "^8.57.1",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "fs-extra": "^11.3.0",
-    "globals": "^16.1.0",
-    "postcss": "^8.5.6",
-    "serve": "^14.2.4",
+    "@babel/eslint-parser": "7.27.1",
+    "@babel/preset-react": "7.27.1",
+    "@eslint/eslintrc": "3.3.1",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "8.26.0",
+    "eslint-config-react": "1.1.7",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "fs-extra": "11.3.0",
+    "globals": "16.1.0",
+    "postcss": "8.5.6",
+    "serve": "14.2.4",
     "size-limit": "8.2.3",
-    "tailwindcss": "^4.1.10",
-    "wait-on": "^8.0.3",
+    "tailwindcss": "4.1.10",
+    "wait-on": "8.0.3",
     "web-ext": "7.8.0"
   },
   "size-limit": [
