--- a/package.json
+++ b/package.json
@@ -5,16 +5,26 @@
   "private": true,
   "dependencies": {
     "ajv-keywords": "3.5.2",
-    "axios": "1.6.7",
+    "axios": "1.11.0",
+    "body-parser": "1.20.3",
+    "cookie": "0.7.1",
+    "encodeurl": "2.0.0",
+    "express": "4.21.2",
+    "finalhandler": "1.3.1",
     "lucide-react": "0.511.0",
+    "merge-descriptors": "1.0.3",
+    "node-fetch": "3.3.1",
+    "path-to-regexp": "0.1.12",
+    "qs": "6.13.0",
     "react": "18.2.0",
     "react-cookie-consent": "9.0.0",
     "react-dom": "18.2.0",
     "react-icons": "5.5.0",
     "react-router": "7.6.2",
     "react-router-dom": "7.6.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "0.0.0",
     "react-tooltip": "5.28.1",
+    "serve-static": "1.16.2",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -86,11 +96,11 @@
     "fs-extra": "11.3.0",
     "globals": "16.1.0",
     "postcss": "8.5.6",
-    "serve": "14.2.4",
+    "serve": "10.0.2",
     "size-limit": "8.2.3",
     "tailwindcss": "4.1.10",
     "wait-on": "8.0.3",
-    "web-ext": "7.8.0"
+    "web-ext": "8.9.0"
   },
   "size-limit": [
     {
@@ -105,3 +115,4 @@
     }
   ]
 }
+
