--- a/package.json
+++ b/package.json
@@ -113,6 +113,19 @@
       "limit": "100 KB",
       "name": "CSS bundles"
     }
-  ]
+  ],
+  "overrides": {
+    "ajv": "^8.17.1",
+    "node-fetch": "3.3.1",
+    "body-parser": "1.20.3",
+    "express": "4.21.2",
+    "qs": "6.13.0",
+    "cookie": "0.7.1",
+    "encodeurl": "2.0.0",
+    "finalhandler": "1.3.1",
+    "merge-descriptors": "1.0.3",
+    "path-to-regexp": "0.1.12",
+    "send": "0.19.0",
+    "serve-static": "1.16.2"
+  }
 }
-
