--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "private": true,
   "dependencies": {
     "ajv-keywords": "3.5.2",
-    "axios": "^1.11.0",
+    "axios": "1.11.0",
     "lucide-react": "0.511.0",
     "react": "18.2.0",
     "react-cookie-consent": "9.0.0",
@@ -13,7 +13,7 @@
     "react-icons": "5.5.0",
     "react-router": "7.6.2",
     "react-router-dom": "7.6.3",
-    "react-scripts": "^5.0.1",
+    "react-scripts": "5.0.1",
     "react-tooltip": "5.28.1",
     "web-vitals": "2.1.4"
   },
@@ -85,13 +85,13 @@
     "eslint-plugin-react-hooks": "4.6.2",
     "fs-extra": "11.3.0",
     "globals": "16.1.0",
-    "html-webpack-plugin": "^5.6.3",
+    "html-webpack-plugin": "5.6.3",
     "postcss": "8.5.6",
-    "serve": "^10.0.2",
+    "serve": "10.0.2",
     "size-limit": "8.2.3",
     "tailwindcss": "4.1.10",
     "wait-on": "8.0.3",
-    "web-ext": "^8.9.0"
+    "web-ext": "8.9.0"
   },
   "size-limit": [
     {
