--- a/package.json
+++ b/package.json
@@ -4,13 +4,17 @@
   "homepage": ".",
   "private": true,
   "dependencies": {
-    "@testing-library/jest-dom": "6.6.3",
-    "@testing-library/react": "16.3.0",
-    "@testing-library/user-event": "13.5.0",
-    "axios": "1.6.7",
-    "react": "19.1.0",
-    "react-dom": "19.1.0",
+    "ajv-keywords": "3.5.2",
+    "axios": "1.11.0",
+    "lucide-react": "0.511.0",
+    "react": "18.2.0",
+    "react-cookie-consent": "9.0.0",
+    "react-dom": "18.2.0",
+    "react-icons": "5.5.0",
+    "react-router": "7.6.2",
+    "react-router-dom": "7.6.3",
     "react-scripts": "5.0.1",
+    "react-tooltip": "5.28.1",
     "web-vitals": "2.1.4"
   },
   "scripts": {
@@ -43,11 +47,14 @@
     ],
     "coverageThreshold": {
       "global": {
-        "branches": 80,
-        "functions": 80,
-        "lines": 80,
-        "statements": 80
+        "branches": 40,
+        "functions": 40,
+        "lines": 50,
+        "statements": 50
       }
+    },
+    "moduleNameMapper": {
+      "^react-router-dom$": "<rootDir>/src/__mocks__/react-router-dom.js"
     }
   },
   "browserslist": {
@@ -63,21 +70,28 @@
     ]
   },
   "devDependencies": {
-    "@babel/eslint-parser": "^7.27.1",
-    "@babel/preset-react": "^7.27.1",
-    "@eslint/eslintrc": "^3.3.1",
-    "@eslint/js": "^8.26.0",
-    "eslint": "^8.57.1",
-    "eslint-config-react": "^1.1.7",
-    "eslint-plugin-jsx-a11y": "^6.10.2",
-    "eslint-plugin-react": "^7.37.5",
-    "eslint-plugin-react-hooks": "^4.6.2",
-    "fs-extra": "^11.3.0",
-    "globals": "^16.1.0",
-    "serve": "^14.2.4",
+    "@babel/eslint-parser": "7.27.1",
+    "@babel/preset-react": "7.27.1",
+    "@eslint/eslintrc": "3.3.1",
+    "@testing-library/dom": "10.4.0",
+    "@testing-library/jest-dom": "6.6.3",
+    "@testing-library/react": "16.3.0",
+    "@testing-library/user-event": "14.6.1",
+    "autoprefixer": "10.4.21",
+    "eslint": "8.26.0",
+    "eslint-config-react": "1.1.7",
+    "eslint-plugin-jsx-a11y": "6.10.2",
+    "eslint-plugin-react": "7.37.5",
+    "eslint-plugin-react-hooks": "4.6.2",
+    "fs-extra": "11.3.0",
+    "globals": "16.1.0",
+    "html-webpack-plugin": "5.6.3",
+    "postcss": "8.5.6",
+    "serve": "10.0.2",
     "size-limit": "8.2.3",
-    "wait-on": "^8.0.3",
-    "web-ext": "7.8.0"
+    "tailwindcss": "4.1.10",
+    "wait-on": "8.0.3",
+    "web-ext": "8.9.0"
   },
   "size-limit": [
     {
